apps/adguardhome/components/tls/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguardhome
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: adguardhome
          ports:
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 443
              name: https-udp
              protocol: UDP
            - containerPort: 853
              name: dot
              protocol: TCP
            - containerPort: 853
              name: doq
              protocol: UDP
            - containerPort: 5443
              name: dnscrypt
              protocol: TCP
            - containerPort: 5443
              name: dnscrypt-udp
              protocol: UDP
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: adguardhome-tls
