apps/adguardhome/components/tls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome
  namespace: shikanime
spec:
  ports:
    - name: https
      port: 443
      targetPort: https
